--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.artists.ArtistsFragment">
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -16,16 +15,16 @@
         android:paddingRight="10dp"
         tools:context=".AlbumsActivity"
         tools:ignore="MissingConstraints">
-<!--        tools:context=".AlbumsActivity"-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            tools:context=".AlbumsActivity"
-            android:weightSum="2">
-            <!--        tools:context=".AlbumsActivity"-->
+            android:weightSum="2"
+            tools:context=".AlbumsActivity">
+
             <TextView
                 android:id="@+id/artists_fragment_title"
                 android:layout_width="wrap_content"
@@ -34,16 +33,24 @@
                 android:layout_weight="1"
                 android:text="@string/title_artists"
                 android:textSize="30sp" />
+
+
+
+
+
+
+
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            tools:context=".AlbumsActivity"
-            android:weightSum="2">
-            <!--        tools:context=".AlbumsActivity"-->
+            android:weightSum="2"
+            tools:context=".AlbumsActivity">
 
             <TextView
                 android:id="@+id/artists_fragment_desc"
@@ -62,8 +69,9 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="text"
-                android:hint="Buscar" />
+                android:hint="@string/buscarString" />
         </LinearLayout>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
