--- a/app/src/main/res/layout/activity_album_detail.xml
+++ b/app/src/main/res/layout/activity_album_detail.xml
@@ -143,6 +143,12 @@
                             android:layout_weight="1"
                             android:textColor="@android:color/black"
                             android:textSize="15sp" />
+
+                        <Button
+                            android:id="@+id/new_track_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Agregar nuevo track" />
                     </LinearLayout>
                 </LinearLayout>
             </ScrollView>
