--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -31,8 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_weight="1"
-                android:text="@string/menu_albums"
-                android:textSize="30sp" />
+                android:text="@string/title_albums_fragment"
+                android:textSize="20sp" />
             <!--Este botón se debe ocultar en función del tipo de usuario-->
             <Button
                 android:id="@+id/fetch_button"
@@ -70,7 +70,8 @@
                 android:ems="10"
                 android:inputType="text"
                 android:hint="@string/albums_fragment_search"
-                android:importantForAutofill="no" />
+                android:importantForAutofill="no"
+                android:textColorHint="#606060" />
         </LinearLayout>
 
         <FrameLayout
